[package]
name = "kiss3d_recording"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>", "Wendell Smith <wackywendell@gmail.com>"]

[dependencies]
libc = "*"

[dev-dependencies]
nalgebra = "*" # for example 'recording.rs'

[dependencies.kiss3d]
git = "https://github.com/sebcrozet/kiss3d"

[dependencies.avcodec55]
git="https://github.com/mewlips/rust-ffmpeg.git"

[dependencies.avutil52]
git="https://github.com/mewlips/rust-ffmpeg.git"

[dependencies.avformat55]
git="https://github.com/mewlips/rust-ffmpeg.git"

[dependencies.swscale2]
git="https://github.com/mewlips/rust-ffmpeg.git"
